【Sprint3.3.2】【Beetl】内存管理器-改为线程安全